# Rag_Pipeline

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  typesense.ipynb
data/text_file/: doc1.txt  doc2.txt
faiss_store/: faiss.index  metadata.pkl
notebook/: documents.ipynb  pdf_loader.ipynb
source/: data_loader.py  embedding.py  search.py  vectorstore.py
