[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "filelock==3.20.1",
    "fsspec==2025.12.0",
    "ipykernel>=7.1.0",
    "jinja2==3.1.6",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.0",
    "pandas==2.3.3",
    "pymupdf>=1.26.7",
    "pypdf>=6.5.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "six==1.17.0",
    "sympy==1.14.0",
    "torch==2.9.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
]
